test/sh/error/oper/non_bool_cond.sk
x := 0

if x {
	# do nothing
}
